--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<html ng-app="phonecatApp">
+<html ng-app="lunchAndLearnExample">
 <head>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src="js/controllers.js"></script>
 </head>
-<body ng-controller="PhoneListCtrl">
+<body ng-controller="StockDataController">
 
 Search by symbol: <input type="text" ng-model="search.symbol">
 <table>
