--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 </head>
 <body ng-controller="StockDataController">
 
+<div>
+  <button ng-click="getStockData()">Get Stock Information!</button>
+</div>
 Search by symbol: <input type="text" ng-model="search.symbol">
+
+
 <table>
   <tr>
     <th>Date</th>
@@ -17,7 +22,7 @@ Search by symbol: <input type="text" ng-model="search.symbol">
     <th>Volume</th>
 
   </tr>
-  <tr ng-repeat="data in databaseresponse |filter:search">
+  <tr ng-repeat="data in databaseresponse |filter:search|orderBy:'vl'">
 
     <td>{{data.date}}</td>
     <td>{{data.symbol}}</td>
