--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 <div>
   <button ng-click="getStockData()">Get Stock Information!</button>
 </div>
-Search by symbol: <input type="text" ng-model="search.symbol">
 
 <table ng-if="isTodayTuesday">
   <tr>
@@ -34,7 +33,7 @@ Search by symbol: <input type="text" ng-model="search.symbol">
     <th>Volume</th>
 
   </tr>
-  <tr ng-repeat="data in databaseresponse |filter:search|orderBy:'vl'">
+  <tr ng-repeat="data in databaseresponse">
 
     <td>{{data.date}}</td>
     <td>{{data.symbol}}</td>
