Custom Directive example for lunch and learn

--- a/directives/directiveTemplate.html
+++ b/directives/directiveTemplate.html
@@ -1,13 +1,15 @@
 <h2>{{strVariable}}</h2>
-<div class="name-input">
-    {{variable.inputname}}
-    <input class="name">
-</div>
+<form ng-submit="onButtonCLick()">
+    <div class="name-input">
+        {{variable.inputname}}
+        <input ng-model="name" type="text" class="name">
+    </div>
+    <div class="pass-input">
+        {{variable.inputpass}}
+        <input ng-model="pass" type="password" class="pass">
+    </div>
 
-<div class="pass-input">
-    {{variable.inputpass}}
-    <input class="pass">
-</div>
-<div class="button">
-    <button type="submit">Submit Me!</button>
-</div>
+    <div class="button">
+        <input type="submit" value="{{variable.inputButton}}">
+    </div>
+</form>
