--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     </head>
 
     <body ng-controller="StockDataController">
-        <h1>{{dataBindingExample}}</h1>
+
         <lunch-and-learn-directive info="inputs"
-                string="Login html built with a directive">
+                                   string="Login html built with a directive">
         </lunch-and-learn-directive>
+
+        <lunch-and-learn-directive info="inputsDos"
+                                   string="Butts">
+        </lunch-and-learn-directive>
+
+
 
     </body>
 </html>
